# spl-token-burn

./: .gitignore  package-lock.json  package.json
src/client/: hello_world.ts  idl.ts  main.ts
src/program-rust/: Cargo.toml
src/program-rust/src/: lib.rs
