
[package]
name = "spl-token-burn"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
spl-token = { version = "3.0.0-pre1", features = ["no-entrypoint"] }
solana-program = "~1.8.14"

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"
[lib]
name = "mergenft"
crate-type = ["cdylib", "lib"]
